# Data.Exchange.and.Interoperability

./: .gitignore  CONTRIBUTING.md  LICENSE  MockoonSpecifications.md  README.md  SCHEMA-EVOLUTION.md  Troubleshooting README.md  context.jsonld  fhir-mapping.yaml  hmis-openapi-spec.yml  hmis-spec-v0.1.0-beta.yml  hmis-spec-v1.0.yml  hmis-spec-v1.yml  hmis_api_ld_0.4.yaml  hmis_api_ld_0.5.yaml
Archive/: CODE-OF-CONDUCT.md  CONTRIBUTING.md  hmis-spec-v1.0b11.yml
Archive/adr/: 0001-adr-record-architecture-decisions.md  0006-Shifting from Use Case Focused to Foundational.md  template.md
Archive/pre-reformat/hmis-codegen/wasm/: Cargo.toml
JSON Converter/: JSONLD_converter.js
Upcoming Version Drafts/: draft-hmis-api-ver0.2.yaml  hmis-spec-v0.2.0-beta.yml  hmis_api_ld_0.4.yaml
doc/: 001 Authorization of User Access.md  001. Privacy and Security.md  HMIS API Reference Guide v1.0.md  HMIS Toolchain Custom Template Quick Start Guide.md
docs/: HMIS API Reference Guide v1.0.md
hmis-codegen/: FY26HMIS_JSON-LD_v1.jsonld  README.md  __init__.py  cli.py  effects.py  generator.py  models.py  parser.py  pyproject.toml  utils.py  wasm_codegen.py
hmis-codegen/src/: generated.rs  lib.rs  validator.rs
hmis-codegen/src/hmis_codegen/: README.md  cli.py  effects.py  generator.py  models.py  parser.py  utils.py  wasm_codegen.py
hmis-codegen/templates/: effect_handlers.j2  effect_mocks.j2  fhir-transformer.j2  openapi_yaml.j2
ontology/: HMIS_ontology 2026.06.02
src/: generated.rs  lib.rs  validator.rs
templates/: effect_handlers.j2  jsonld_context.j2  mockoon_config.j2  openapi_yaml.j2
wasm/: Cargo.toml
(+60 files in other folders)
